updated the login redirect once again

--- a/public/views/appointments/appointments-list.html
+++ b/public/views/appointments/appointments-list.html
@@ -20,7 +20,7 @@
     <p>{{ appt.client }} </p>
     <p>${{ appt.amount }} </p>
     <label>Service</label>
-    <p>{{ appt.note }} Wash, Blow out, Color Correction</p>
+    <p>{{ appt.note }} </p>
     <button ng-click="model.deleteAppointment($event)">Delete3</button>
   </div>
 </section>
