attempting the appointment list

--- a/public/views/appointments/appointments-list.html
+++ b/public/views/appointments/appointments-list.html
@@ -21,7 +21,12 @@
     <p>${{ appt.amount }} </p>
     <label>Service</label>
     <p>{{ appt.note }} </p>
-    <button ng-click="model.deleteAppointment($event)">Delete3</button>
+    <!--<button ng-click="model.deleteAppointment($event, )">Delete3</button>-->
+    <button ng-click="model.deleteAppointment(this)">Delete4</button>
+    <button ng-click="model.deleteAppointment(model.appts[appt])">Delete3</button>
+    <button ng-click="model.deleteAppointment(model.appts[$index])">DeleteIdxInAppts
+    </button>
+    <button ng-click="model.deleteAppointment($index)">DeleteIdx</button>
   </div>
 </section>
 <footer>
