add in delete button image, working on delete functionality in next commit

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -443,6 +443,8 @@ header .logo img {
 .container-appointments div.appointment {
     display: block;
     float: left;
+    padding: 30px 0;
+    position: relative;
     width: 100%;
 }
 .container-appointments div.appointment:nth-of-type(even) {
@@ -489,6 +491,18 @@ header .logo img {
 }
 .container-appointments div.appointment p {
 
+}
+.container-appointments div.appointment button.delete-appt-btn {
+    height: 30px;
+    position: absolute;
+    right: 0;
+    /*text-decoration: none;*/
+    top: 0;
+    width: 30px;
+}
+.container-appointments div.appointment button.delete-appt-btn img {
+    height: 100%;
+    width: 100%;
 }
 /*--------------------------------------------------------------------
 # SETTINGS SCREEN
