expense names show now display as paragraphs

--- a/public/views/expenses/expenses-list.html
+++ b/public/views/expenses/expenses-list.html
@@ -24,7 +24,7 @@
         <li>Professional Services <span>$33</span></li>
     </ul>
     <div class="expense" ng-repeat="expType in model.expenseTypes">
-        <p>{{expType}}</p>
+        <p>{{expType.name}}</p>
     </div>
 </section>
 <footer>
