tweaks to add expense type when expense is added

--- a/public/views/expenses/expenses-new.html
+++ b/public/views/expenses/expenses-new.html
@@ -10,19 +10,9 @@
     <h2>New Expenses</h2>
     <form>
         <label for="expense-type">Expense Type</label>
-        <!--<select name="expense-type" id="expense-type">-->
-            <!--<option value="" disabled selected>Select the expense type</option>-->
-            <!--<option value="advertising">Advertising</option>-->
-            <!--<option value="assets">Assets</option>-->
-            <!--<option value="commissions">Commissions</option>-->
-            <!--<option value="insurance">Insurance</option>-->
-            <!--<option value="materials-supplies">Materials & Supplies</option>-->
-            <!--<option value="meals-entertainment">Meals & Entertainment</option>-->
-            <!--<option value="professional-services">Professional Services</option>-->
-        <!--</select>-->
-        <select name="expense-type" id="expense-type">
+        <select name="expense-type" id="expense-type" ng-model="model.expense.expense_type_id">
             <option value="" disabled selected>Select the expense type</option>
-            <option ng-selected=""
+            <option
             ng-repeat="type in model.expenseTypes"
             ng-value="type.id">{{type.name}}</option>
         </select>
