hopeful this will work

--- a/public/views/expenses/expenses-list.html
+++ b/public/views/expenses/expenses-list.html
@@ -17,8 +17,8 @@
     <ul class="expense">
         <!--<li ng-repeat="expType in model.expenseTypes">{{expType.name}}<span></span></li>-->
         <li ng-repeat="expense in amounts">
-            {{expense[$index]}}
-            <span>{{expense[$index].total}}</span>
+            {{expense.type}}
+            <span>{{expense.total}}</span>
         </li>
     </ul>
 </section>
