--- a/public/views/settings/settings.html
+++ b/public/views/settings/settings.html
@@ -15,6 +15,8 @@
   <!--<input type="text" disabled ng-model="user.email">-->
   <input type="text" disabled ng-model="model.user.email">
   <!-- Email pulled from Fb/Gmail -->
+  <label>Mobile Phone</label>
+  <input type="text" disabled ng-model="model.user.mobile">
   <label>Tax Profile</label>
 
 </section>
