--- a/public/views/login/login.html
+++ b/public/views/login/login.html
@@ -7,6 +7,9 @@
     </a>
 </header>
 <section class="container-login">
+    <div ng-show="model.error" class="alert alert-danger" role="alert">
+        {{model.error}}
+    </div>
     <div>
         <h2>Beauty Books</h2>
         <a ng-click="model.login($event)" id="login-facebook">
@@ -21,12 +24,6 @@
                 Login with Google
             </button>
         </a>
-        <!--<a ng-click="model.login($event)" id="login-google">-->
-            <!--<button>-->
-                <!--<img class="social-icon" ng-src="./img/google-icon.png" alt="gmail-logo"/>-->
-                <!--Login with Google-->
-            <!--</button>-->
-        <!--</a>-->
     </div>
 </section>
 <!-- TABS FOR THE NAV -->
