--- a/public/views/home/home-week.html
+++ b/public/views/home/home-week.html
@@ -7,9 +7,7 @@
     </a>
 </header>
 <section class="container-home">
-    <p>Hello <span ng-bind="model.user.name"></span> view your weekly growth in
-        business below</p>
-    <span ng-bind="model.user.name"></span>
+    <p>Cumulative Net Income:</p>
 
     <div class="home-buttons">
         <a href="#/home/week">
