--- a/public/views/home/home-ytd.html
+++ b/public/views/home/home-ytd.html
@@ -7,20 +7,19 @@
     </a>
 </header>
 <section class="container-home">
-    <p>Hello <span ng-bind="model.user.name"></span> view your yearly growth in business below</p>
-    <span ng-bind="model.user.name"></span>
+    <p>Cumulative Net Income:</p>
     <div class="home-buttons">
-        <a href="#/home/week">
-            <button>Wk</button>
-        </a>
         <a href="#/home/month">
             <button>Mo</button>
         </a>
+        <a href="#/home/year">
+            <button class="active">Y</button>
+        </a>
         <a href="#/home">
-            <button class="active">Yr</button>
+            <button>YTD</button>
         </a>
     </div>
-    <canvas id="yearlyChart"></canvas>
+    <canvas id="ytdChart"></canvas>
     <div class="home-more-info">
         <small>Deductions</small>
         <span class="large">$173</span>
