--- a/public/views/home/home-ytd.html
+++ b/public/views/home/home-ytd.html
@@ -13,10 +13,10 @@
             <button>Mo</button>
         </a>
         <a href="#/home/year">
-            <button class="active">Y</button>
+            <button>Y</button>
         </a>
         <a href="#/home">
-            <button>YTD</button>
+            <button class="active">YTD</button>
         </a>
     </div>
     <canvas id="ytdChart"></canvas>
