--- a/public/views/home/home-month.html
+++ b/public/views/home/home-month.html
@@ -20,15 +20,22 @@
         </a>
     </div>
     <canvas id="monthlyChart"></canvas>
+
+    <div id="monthContainer"
+         style="min-width: 310px; height: 400px; max-width: 800px; margin: 0 auto">
+    </div>
+
     <div class="home-more-info">
         <small>Deductions</small>
         <span class="large">$173</span>
         <span class="large" ng-bind="model.income"></span>
+        <span class="large">{{model.income}}</span>
     </div>
     <div class="home-more-info">
         <small>Next Tax Payment</small>
         <span class="large">$928</span>
         <span class="large" ng-bind="model.tax"></span>
+        <span class="large">{{model.tax}}</span>
         <small>due on March 28, 2018</small>
     </div>
 </section>
