--- a/public/views/home/home-month.html
+++ b/public/views/home/home-month.html
@@ -29,12 +29,14 @@
         <small>Deductions</small>
         <span class="large">$173</span>
         <span class="large" ng-bind="model.income"></span>
+        <span class="large" ng-bind="income"></span>
         <span class="large">{{model.income}}</span>
     </div>
     <div class="home-more-info">
         <small>Next Tax Payment</small>
         <span class="large">$928</span>
         <span class="large" ng-bind="model.tax"></span>
+        <span class="large" ng-bind="tax"></span>
         <span class="large">{{model.tax}}</span>
         <small>due on March 28, 2018</small>
     </div>
