binding tax to screen

--- a/public/views/home/home-month.html
+++ b/public/views/home/home-month.html
@@ -28,7 +28,7 @@
     <div class="home-more-info">
         <small>Deductions</small>
         <span class="large">$173</span>
-        <span class="large" ng-bind="income"></span>
+        <span class="large">{{income}}</span>
     </div>
     <div class="home-more-info">
         <small>Next Tax Payment</small>
