still receiving errors on the front end

--- a/public/views/home/home-month.html
+++ b/public/views/home/home-month.html
@@ -23,11 +23,11 @@
     <div class="home-more-info">
         <small>Deductions</small>
         <span class="large">$173</span>
-        <span class="large">{{income}}</span>
+        <span class="large income">{{income}}</span>
     </div>
     <div class="home-more-info">
         <small>Next Tax Payment</small>
-        <span class="large">$928</span>
+        <span class="large tax">$928</span>
         <small>due on March 28, 2018</small>
     </div>
 </section>
