canvas element needed to be wrapped in a div

--- a/public/views/home/home-ytd.html
+++ b/public/views/home/home-ytd.html
@@ -19,7 +19,9 @@
             <button class="active">YTD</button>
         </a>
     </div>
+<div>
     <canvas id="ytdChart"></canvas>
+</div>
     <div class="home-more-info">
         <small>Total Income</small>
         <span class="large income">{{model.income}}</span>
