--- a/public/views/home/home-month.html
+++ b/public/views/home/home-month.html
@@ -19,7 +19,9 @@
             <button>YTD</button>
         </a>
     </div>
-    <canvas id="monthlyChart"></canvas>
+    <div>
+        <canvas id="monthlyChart"></canvas>
+    </div>
     <div class="home-more-info">
         <small>Total Income</small>
         <span class="large income">{{model.income}}</span>
