--- a/public/views/home/home-year.html
+++ b/public/views/home/home-year.html
@@ -20,7 +20,9 @@
       <button>YTD</button>
     </a>
   </div>
+<div>
   <canvas id="yearChart"></canvas>
+</div>
   <div class="home-more-info">
     <small>Total Income</small>
     <span class="large income">{{model.income}}</span>
